tests/examples/bad/bad007.lat
int main () {
    int[] a = new int[5];
    a[0] = 3;
    a[4] = 5;

    for(int x : a) {
        x = 3;
        a.length();
    }

    return 3;
}